# template

./: .buildinfo  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.html  LICENSE  Makefile  Pipfile  README.html  README.md  _config.yml  environment.yml  genindex.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: gh-pages.yml  release.yml
_downloads/a785fd5f8c642006d0596261974e20fc/: CITATION.cff
_downloads/fa284b17a621139515203c0d6d5c7ebd/: bibliography.bib
_sources/: README.md
_sources/.github/ISSUE_TEMPLATE/: peer_review.md
_sources/docs/: CONTRIBUTING.md  gallery.md
_sources/notebooks/: bibliography.ipynb  nasa-apod.ipynb  world-bank-api.ipynb  world-bank-package.ipynb
_static/: custom.css
docs/: CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.html  _config.yml  _toc.yml  bibliography.bib  folders-and-naming.md  gallery.html  gallery.md  general-guide.md  git-workflows.md  good-practices.md  introduction-to-data-goods.html  introduction-to-data-goods.md  notebooks-workflows.md  peer-review.html  peer-review.md  presenting-results.md  requirements.txt
notebooks/: bibliography.html  conda-lock.yml  environment.yml  nasa-apod.html  nasa-apod.ipynb  world-bank-api.html  world-bank-api.ipynb  world-bank-package.html  world-bank-package.ipynb
notebooks/nighttime-lights/: nighttime-lights.html  nighttime-lights.ipynb
src/datalab/: __init__.py  indicators.py
src/template/: indicators.py
