[metadata]
name = datalab
version = 0.0.1
description = An Python package example from the World Bank Data Lab
long_description = file: README.md, LICENSE
keywords = World Bank Data Lab
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache-2.0
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pycountry>=22.3.5

[options.packages.find]
where=src